# jupedsim-scenarios

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs.yml  workflow.yml
docs/: api-design-cleanup.md  docs-enhancement-plan.md  requirements.txt
docs/source/: choosing_an_entrypoint.rst  cli.rst  concepts.rst  conf.py  cookbook.rst  howtos.rst  index.rst  troubleshooting.rst
docs/source/_static/css/: custom.css
docs/source/notebooks/cookbook/: stage_routing_square_room.ipynb
examples/: _build_howtos.py  _build_notebook.py  bottleneck_tutorial.ipynb  run_zip.py
examples/cookbook/: bottleneck_zone_nt_diagram.ipynb  faster_is_slower.ipynb  model_comparison.ipynb  run_to_pedpy.ipynb  scenario_api_demo.ipynb  stage_routing_square_room.ipynb  template_script.ipynb
examples/howtos/: 00_quickstart.ipynb  01_inspect_scenario.ipynb  02_change_agent_count.ipynb  02_visualisation.ipynb  03_change_agent_speed.ipynb  04_change_agent_speed.ipynb  04_sweep_basics.ipynb  05_set_zone_speed_factor.ipynb  05_sweep_basics.ipynb  06_set_checkpoint_waiting_time.ipynb  06_set_zone_speed_factor.ipynb  07_interactive_runner.ipynb  07_set_checkpoint_waiting_time.ipynb  09_build_from_scratch.ipynb  10_sweep_save_load.ipynb  11_sweep_via_copy.ipynb
src/jupedsim_scenarios/: __init__.py  cli.py  direct_steering_runtime.py  runner.py  simulation_init.py  sweep.py
tests/: conftest.py  test_additive_ops.py  test_cli.py  test_collection_views.py  test_copy_overrides.py  test_error_message_uses_dist_id.py  test_fallback_checkpoint_chain.py  test_issue_15_narrow_exit.py  test_kwarg_typo_guard.py  test_legacy_journeys_shim.py  test_load_scenario_formats.py  test_pedpy_adapter.py  test_public_aliases.py  test_quickstart_placement_regression.py  test_repr.py  test_safety_multipliers.py  test_save_scenario.py  test_scenario_runner.py  test_smoke.py  test_speed_alias_deprecation.py  test_sweep.py  test_sweep_from_factory.py  test_visualise.py  test_walkable_wkt_cache.py
tests/fixtures/: corridor_simple.json  issue_15_narrow_exit.json
