[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupedsim-scenarios"
version = "0.6.3"
description = "Run, sweep, and analyze JuPedSim scenarios from the web-app JSON schema."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Pedestrian Dynamics" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jupedsim>=1.4",
    "shapely>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pedpy>=1.2",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.11",
    "nbmake>=1.5",
]
viz = [
    "matplotlib>=3.7",
    "plotly>=5",
]

[project.scripts]
jps-scenarios = "jupedsim_scenarios.cli:main"

[project.urls]
Repository = "https://github.com/PedestrianDynamics/jupedsim-scenarios"
Issues = "https://github.com/PedestrianDynamics/jupedsim-scenarios/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jupedsim_scenarios = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Silenced for the verbatim Sprint-1 port from Web-Based-Jupedsim:
#   B007 — `for i in range(N)`-style unused loop variables (pervasive)
#   B904 — bare `raise Exception(...)` inside except handlers
# Both will be tightened up in a follow-up once the code is ours stylistically.
ignore = ["E501", "B007", "B904"]

[tool.mypy]
python_version = "3.11"
# Permissive baseline: catches structural bugs (return-type mismatches,
# missing annotations, implicit Optional) without demanding strict
# typing on dict-heavy scenario code. Tighten later by dropping flags.
ignore_missing_imports = true   # jupedsim, joblib, pandas: no stubs
warn_return_any = false
exclude = ["tests/", "build/", "docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
